Snap to face projection - Entire mesh is affected by projection when Proportional Editing mode is active, regardless of influence radius #34244

Closed
opened 2013-02-14 17:30:27 +01:00 by Bjørnar Frøyse · 6 comments

%%%Windows 7, Nvidia GeForce GTX 560 Ti

Bug is present in 2.66 RC and 2.65.

Last working official version was 2.64.

Current buggy behaviour:
In editmode, when using snap to face, with projection and Proportional Editing mode (PE) active, the projection is done on the entire mesh, regardless of PE radius.

Expected behaviour (2.64):
When using projection and PE together, projection should only be applied to vertices inside the PE radius. Vertices outside the radius should be ignored.

Steps to repeat the problem in the attached file:

  1. Make sure you're in edit mode with Proportional Editing mode active.
  2. Make sure snapping is enabled and set to Face, with projection also activated, like in this image: http://i.imgur.com/EJJbKWU.png
  3. Select a vertex in the object called "Mesh to be projected" and move it over the surface of the sphere called "Projection target".
  4. Adjust PE radius by scrolling the mouse wheel while moving the vertex.
  5. Observe the entire mesh being projected, even if PE radius is nearly zero.

This makes it very cumbersome to use PE when doing retopology work. Especially annoying when using it on a mesh that completely wraps around another, as it will cause vertices on the back side to be projected to the front.
It used to be a big time saver, but was broken sometime after 2.64. Does not work in 2.65 or 2.66.

Thanks :)%%%

%%%Windows 7, Nvidia GeForce GTX 560 Ti Bug is present in 2.66 RC and 2.65. Last working official version was 2.64. Current buggy behaviour: In editmode, when using snap to face, with projection and Proportional Editing mode (PE) active, the projection is done on the entire mesh, regardless of PE radius. Expected behaviour (2.64): When using projection and PE together, projection should only be applied to vertices inside the PE radius. Vertices outside the radius should be ignored. Steps to repeat the problem in the attached file: 1. Make sure you're in edit mode with Proportional Editing mode active. 2. Make sure snapping is enabled and set to Face, with projection also activated, like in this image: http://i.imgur.com/EJJbKWU.png 3. Select a vertex in the object called "Mesh to be projected" and move it over the surface of the sphere called "Projection target". 4. Adjust PE radius by scrolling the mouse wheel while moving the vertex. 5. Observe the entire mesh being projected, even if PE radius is nearly zero. This makes it very cumbersome to use PE when doing retopology work. Especially annoying when using it on a mesh that completely wraps around another, as it will cause vertices on the back side to be projected to the front. It used to be a big time saver, but was broken sometime after 2.64. Does not work in 2.65 or 2.66. Thanks :)%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I've seen some another trouble with the face projection snapping:
When the vert's you're going to project are in the same mesh there is a trouble:

(snap_to_faces_01.blend)

  • hover the mouse somewhere over the selected face
  • press G,
  • press Ctrl...
  • and the face snaps to mouse by the closest vertex!

By all technical logic it's expected just to be projected on the underlying face(s) of this mesh.

I'm not sure that was by the design. And without "snap to other objects" checked it works like this. BUT in a workflow it's often necessary to show other objects while doing face snapping operations WITHOUT snapping to other objects (so I mean I must leave it unchecked). I didn't thought out this thing because that was a case of my modelling work.
I've just decided to "forget" about this and to delay before an emergence of some report close to my problem (b'coz it's not too crucial). I mean it's like a "combo" :) Two issues of one area.

And another issue that in some cases (when a surface to be projected on is not parallel to the view)... not simple cases... the projecting occurs wrong.. with some shift. I remember it's a side shift. Sorry, I can't recall that it was better before some version but I remember that it WAS better.. maybe in 2.5. I'm not sure. If you're going to touch this theme then I'll dig into this problem and I'll find a concrete case when I've got this issue.%%%

%%%I've seen some another trouble with the face projection snapping: When the vert's you're going to project are in the same mesh there is a trouble: (snap_to_faces_01.blend) - hover the mouse somewhere over the selected face - press G, - press Ctrl... - and the face snaps to mouse by the closest vertex! By all technical logic it's expected just to be projected on the underlying face(s) of this mesh. I'm not sure that was by the design. And without "snap to other objects" checked it works like this. BUT in a workflow it's often necessary to show other objects while doing face snapping operations WITHOUT snapping to other objects (so I mean I must leave it unchecked). I didn't thought out this thing because that was a case of my modelling work. I've just decided to "forget" about this and to delay before an emergence of some report close to my problem (b'coz it's not too crucial). I mean it's like a "combo" :) Two issues of one area. And another issue that in some cases (when a surface to be projected on is not parallel to the view)... not simple cases... the projecting occurs wrong.. with some shift. I remember it's a side shift. Sorry, I can't recall that it was better before some version but I remember that it WAS better.. maybe in 2.5. I'm not sure. If you're going to touch this theme then I'll dig into this problem and I'll find a concrete case when I've got this issue.%%%

%%%Checking on a fix%%%

%%%Checking on a fix%%%

%%%fixed r54675.

@Moolah. You are raising 2 unrelated issues in this report (Nothing to do with snapping failing in proportional edit-mode).

The first point you make is intended behavior from what I can tell, even if you think its not ideal.

The second issue you don't give enough explanation for a developer to redo.

If you are sure these are bugs, please open separate reports.

closing.%%%

%%%fixed r54675. @Moolah. You are raising 2 unrelated issues in this report (Nothing to do with snapping failing in proportional edit-mode). The first point you make is intended behavior from what I can tell, even if you think its not ideal. The second issue you don't give enough explanation for a developer to redo. If you are sure these are bugs, please open separate reports. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%@Campbell. Thank you! I got. I'll make the reports when I'll be closer to this issue.%%%

%%%@Campbell. Thank you! I got. I'll make the reports when I'll be closer to this issue.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34244
No description provided.