fix [#34244] Snap to face projection - Entire mesh is affected by projection when Proportional Editing mode is active, regardless of influence radius